--- a/Nargo.toml
+++ b/Nargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "skirmish"
+name = "skp"
 type = "bin"
 authors = [""]
-compiler_version = ">=0.27.0"
+compiler_version = ">=0.30.0"
 
 [dependencies]
